[gd_scene load_steps=5 format=2]

[ext_resource path="res://minigame/memory/MemoryTile.gd" type="Script" id=1]
[ext_resource path="res://minigame/memory/MemoryScore.tscn" type="PackedScene" id=2]
[ext_resource path="res://font/score_stamp_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://minigame/memory/tiles/cardback.png" type="Texture" id=4]

[node name="MemoryTile" type="Node2D"]
script = ExtResource( 1 )

[node name="CardBack" type="Node2D" parent="."]
position = Vector2( 90, 90 )
scale = Vector2( 1e-05, 1 )

[node name="cardback" type="Sprite" parent="CardBack"]
texture = ExtResource( 4 )

[node name="CardFront" type="Node2D" parent="."]
position = Vector2( 90, 90 )

[node name="ColorRect" type="ColorRect" parent="CardFront"]
margin_left = -90.0
margin_top = -90.0
margin_right = 90.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite1" type="Sprite" parent="CardFront"]
position = Vector2( 0, -50 )

[node name="Sprite2" type="Sprite" parent="CardFront"]
position = Vector2( -50, 0 )

[node name="Sprite3" type="Sprite" parent="CardFront"]
position = Vector2( 0, 50 )

[node name="Sprite4" type="Sprite" parent="CardFront"]
position = Vector2( 50, 0 )

[node name="Score" parent="CardFront" instance=ExtResource( 2 )]
visible = false
position = Vector2( -71, 71 )
scale = Vector2( 1e-05, 1e-05 )

[node name="ScoreSummary" type="Label" parent="CardFront"]
margin_left = -105.0
margin_top = -89.0
margin_right = 205.0
margin_bottom = -44.0
rect_min_size = Vector2( 310, 44 )
rect_rotation = 23.7
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 155, 22 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Perfect!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
